--- a/MVC_Tutorial_2017/Views/Shared/_Layout.cshtml
+++ b/MVC_Tutorial_2017/Views/Shared/_Layout.cshtml
@@ -17,13 +17,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MVC", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    @if (Session["perfil"] != null && Session["perfil"].ToString() == "0")
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Clientes</a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                                <li>@Html.ActionLink("Pesquisar", "Pesquisar", "Clientes")</li>
+                                <li>@Html.ActionLink("Vendas", "Listavendas", "Clientes")</li>
+                            </ul>
+                        </li>
+                        <li>@Html.ActionLink("Quartos", "Index", "Quartos")</li>
+                        <li>@Html.ActionLink("Utilizadores", "Index", "Utilizadores")</li>
+                        <li>@Html.ActionLink("Saidas", "Index", "EntradasSaidas")</li>
+                    }
+                    @if (Session["perfil"] != null && Session["perfil"].ToString() == "1")
+                    {
+                        <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                        <li>@Html.ActionLink("Entradas/Saídas", "Index", "EntradasSaidas")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
