--- a/MVC_Tutorial_2017/Views/Utilizadores/Edit.cshtml
+++ b/MVC_Tutorial_2017/Views/Utilizadores/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MVC_Tutorial_2017.Models.UtilizadoresModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.nome, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.nome, new { htmlAttributes = new { @class = "form-control", @readonly="readonly" } })
                 @Html.ValidationMessageFor(model => model.nome, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,10 +42,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.perfil, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               <select id="perfil" name="perfil" class="form-control">
-                   <option value="0">Administrador</option>
-                   <option value="1">Funcionário</option>
-               </select>
+                <select id="perfil" name="perfil" class="form-control">
+                    <option value="0">Administrador</option>
+                    <option value="1">Funcionário</option>
+                </select>
                 @Html.ValidationMessageFor(model => model.perfil, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -62,7 +62,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
