--- a/MVC_Tutorial_2017/Views/Utilizadores/Index.cshtml
+++ b/MVC_Tutorial_2017/Views/Utilizadores/Index.cshtml
@@ -35,8 +35,7 @@
             @Html.DisplayFor(modelItem => item.estado)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Edit", "Edit", new { id = item.nome }) |
             @Html.ActionLink("Delete", "Delete", new {  id=item.nome  })
         </td>
     </tr>
