--- a/MVC_Tutorial_2017/Views/Clientes/Edit.cshtml
+++ b/MVC_Tutorial_2017/Views/Clientes/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MVC_Tutorial_2017.Models.ClientesModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm("Create","Clientes",FormMethod.Post,new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,8 @@
         <h4>ClientesModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -62,12 +64,10 @@
                 @Html.ValidationMessageFor(model => model.dada_nascimento, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            <input type="file" name="fotografia" id="fotografia" class="form-control"/>
-        </div>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
