--- a/MVC_Tutorial_2017/Views/Clientes/Index.cshtml
+++ b/MVC_Tutorial_2017/Views/Clientes/Index.cshtml
@@ -29,6 +29,7 @@
         <th>
             @Html.DisplayNameFor(model => model.dada_nascimento)
         </th>
+        <th>Fotografia</th>
         <th></th>
     </tr>
 
@@ -51,6 +52,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.dada_nascimento)
+        </td>
+        <td>
+            <img src="@Url.Content(String.Format("~/Content/Imagens/{0}.jpg",item.id))" width="100"/>
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
