Versão final com paginação e pesquisa dinâmica (com jquery)

--- a/MVC_Tutorial_2017/Views/Clientes/Delete.cshtml
+++ b/MVC_Tutorial_2017/Views/Clientes/Delete.cshtml
@@ -52,11 +52,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.dada_nascimento)
+            @Html.DisplayNameFor(model => model.data_nascimento)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.dada_nascimento)
+            @Html.DisplayFor(model => model.data_nascimento)
         </dd>
 
     </dl>
