--- a/MVC_Tutorial_2017/Views/Clientes/Index2.cshtml
+++ b/MVC_Tutorial_2017/Views/Clientes/Index2.cshtml
@@ -1,13 +1,22 @@
 ﻿@model IEnumerable<MVC_Tutorial_2017.Models.ClientesModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Index2";
 }
 
-<h2>Index</h2>
+<h2>Index2</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @{ 
+        int paginaAtual = ViewBag.paginaAtual;
+        int paginaSeguinte = paginaAtual + 1;
+        int paginaAnterior = paginaAtual - 1;
+    }
+    @if (paginaAnterior > 0)
+    {
+        @Html.ActionLink("Página Anterior", "Index2/" + paginaAnterior.ToString())
+    }
+    @Html.ActionLink("Pagina Seguinte", "Index2/"+paginaSeguinte.ToString())
 </p>
 <table class="table">
     <tr>
@@ -29,7 +38,6 @@
         <th>
             @Html.DisplayNameFor(model => model.data_nascimento)
         </th>
-        <th>Fotografia</th>
         <th></th>
     </tr>
 
@@ -52,9 +60,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.data_nascimento)
-        </td>
-        <td>
-            <img src="@Url.Content(String.Format("~/Content/Imagens/{0}.jpg",item.id))" width="100"/>
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
