--- a/MVC_Tutorial_2017/Views/Shared/_Layout.cshtml
+++ b/MVC_Tutorial_2017/Views/Shared/_Layout.cshtml
@@ -32,8 +32,9 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Clientes</a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                                <li>@Html.ActionLink("Clientes Paginados", "Index2", "Clientes")</li>
                                 <li>@Html.ActionLink("Pesquisar", "Pesquisar", "Clientes")</li>
-                                <li>@Html.ActionLink("Vendas", "Listavendas", "Clientes")</li>
+                                <li>@Html.ActionLink("Pesquisar2", "Pesquisar2", "Clientes")</li>
                             </ul>
                         </li>
                         <li>@Html.ActionLink("Quartos", "Index", "Quartos")</li>
