--- a/MVC_Tutorial_2017/Views/Clientes/Edit.cshtml
+++ b/MVC_Tutorial_2017/Views/Clientes/Edit.cshtml
@@ -58,10 +58,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.dada_nascimento, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.data_nascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.dada_nascimento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.dada_nascimento, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.data_nascimento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.data_nascimento, "", new { @class = "text-danger" })
             </div>
         </div>
 
